[package]
name = "stickboy"
version = "0.1.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"

[dependencies]
uefi = { path = "uefi-rs" }
uefi-services = { path = "uefi-rs/uefi-services" }
uefi-exts = { path = "uefi-rs/uefi-exts" }
log = { version = "0.4", default-features = false }
rgy = { git = "https://github.com/YushiOMOTE/gbr.git" }
